A stopped service worker fails to pass header and referrer on fetch request https://bugs.webkit.org/show_bug.cgi?id=242910 rdar://problem/97616866

Reviewed by Alex Christensen.

We can use the preoload if we try to load the same request or a cloned request.
We cannot in general reuse the preload if the request is changing a bit.
Remove the setting of the navigation preload identifier when creating a new request from another.

* LayoutTests/http/wpt/service-workers/fetch-service-worker-preload-changing-request.https-expected.txt: Added.
* LayoutTests/http/wpt/service-workers/fetch-service-worker-preload-changing-request.https.html: Added.
* LayoutTests/http/wpt/service-workers/fetch-service-worker-preload-worker.js:
(async event.event.request.url.includes.event.preloadResponse.async return):
* LayoutTests/http/wpt/service-workers/resources/fetch-service-worker-preload-script.py:
(main):
* Source/WebCore/Modules/fetch/FetchRequest.cpp:
(WebCore::FetchRequest::initializeWith):

Canonical link: https://commits.webkit.org/257110@main